add forgot password ui

--- a/Halos/app/src/main/res/layout/activity_retrieve_password.xml
+++ b/Halos/app/src/main/res/layout/activity_retrieve_password.xml
@@ -14,14 +14,32 @@
         android:paddingRight="24dp"
         android:background="@color/white">
 
-        <TextView
-            android:text="Welcome"
-            android:id="@+id/welcome_message"
+        <ImageView android:src="@drawable/logo"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="0dp"
             android:layout_gravity="center_horizontal"
             android:background="@color/white" />
+
+        <!--  Email Label -->
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
+            android:id="@+id/forgot_pw_email"
+            android:inputType="textEmailAddress"
+            android:hint="Please enter email" />
+
+        <Button
+            android:id="@+id/btn_get_pw"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="0dp"
+            android:text="Retrieve Password"
+            android:background="@color/white"/>
 
     </LinearLayout>
 </ScrollView>
