--- a/Halos/app/src/main/res/layout/activity_login.xml
+++ b/Halos/app/src/main/res/layout/activity_login.xml
@@ -62,5 +62,15 @@
             android:textColor="@color/accentBlue"
             android:background="@color/white" />
 
+        <Button android:id="@+id/btn_forgot_password"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:text="Forgot Password"
+            android:gravity="center"
+            android:textSize="12dip"
+            android:textColor="@color/accentBlue"
+            android:background="@color/white" />
+
     </LinearLayout>
 </ScrollView>
