--- a/Halos/app/src/main/res/layout/activity_create_account.xml
+++ b/Halos/app/src/main/res/layout/activity_create_account.xml
@@ -28,9 +28,19 @@
             android:layout_marginTop="0dp"
             android:layout_marginBottom="8dp"
             android:background="@color/white"
-            android:id="@+id/input_email"
+            android:id="@+id/create_email"
             android:inputType="textEmailAddress"
             android:hint="Email" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
+            android:id="@+id/create_username"
+            android:inputType="textEmailAddress"
+            android:hint="Username" />
 
         <!--  Password Label android.support.design.widget.-->
         <EditText
