--- a/Halos/app/src/main/res/layout/activity_user_profile.xml
+++ b/Halos/app/src/main/res/layout/activity_user_profile.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_page2"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HalosMapActivity">
+    tools:context="com.example.brian.halos.UserProfile">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/menu"
@@ -20,12 +20,5 @@
         android:theme ="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme ="@style/ThemeOverlay.AppCompat.Light"
         android:layout_weight="1" />
-
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.example.brian.halos.HalosMapActivity" />
 
 </RelativeLayout>
