--- a/Halos/app/src/main/res/layout/activity_user_profile.xml
+++ b/Halos/app/src/main/res/layout/activity_user_profile.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.brian.halos.UserProfile">
+    tools:context="com.example.brian.halos.UserProfileActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/menu"
