--- a/Halos/app/src/main/res/menu/toolbar.xml
+++ b/Halos/app/src/main/res/menu/toolbar.xml
@@ -18,5 +18,9 @@
         android:title="@string/Logout"
         android:orderInCategory="103"
         android:id="@+id/Logout" />
+    <item android:title="Item"
+        android:orderInCategory="104"
+        android:id="@+id/checkout"
+        />
 
 </menu>
