--- a/Halos/app/src/main/res/layout/activity_settings.xml
+++ b/Halos/app/src/main/res/layout/activity_settings.xml
@@ -10,6 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.brian.halos.SettingsActivity">
 
+
+    <!-- TODO: Add input sanitzation -->
     <EditText
         android:id="@+id/radius_input"
         android:layout_width="wrap_content"
