--- a/Halos/app/src/main/res/values/colors.xml
+++ b/Halos/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="accentBlue">#66ccff</color>
+    <color name="black">#000000</color>
+    <color name="yellow">#ffff33</color>
+    <color name="pink">#ffccff</color>
+    <color name="blue">#b3ecff</color>
+    <color name="green">#ccffcc</color>
+    <color name="gold">#ffcc00</color>
 </resources>
