--- a/Halos/app/src/main/res/layout/activity_login.xml
+++ b/Halos/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,12 @@
         android:paddingRight="24dp"
         android:background="@color/white">
 
+        <Button
+            android:text="Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bypasser" />
+
         <ImageView android:src="@drawable/logo"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
