--- a/Halos/app/src/main/res/layout/activity_store.xml
+++ b/Halos/app/src/main/res/layout/activity_store.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
@@ -31,16 +30,18 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/menu">
 
-            <android.support.v4.view.PagerTitleStrip
+            <android.support.v4.view.PagerTabStrip
                 android:layout_width="match_parent"
+                android:background="@color/green"
                 android:id="@+id/TabTitleStrip"
+                android:layout_marginBottom="10dp"
                 android:layout_height="50dp"
                 android:layout_gravity="top" />
 
         </android.support.v4.view.ViewPager>
     </FrameLayout>
-    </RelativeLayout>
+    </LinearLayout>
 
 
-</android.support.design.widget.CoordinatorLayout>
+
 
