--- a/Halos/app/src/main/res/layout/tourcard.xml
+++ b/Halos/app/src/main/res/layout/tourcard.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
     android:layout_height="120dp">
 
     <android.support.v7.widget.CardView
