--- a/Halos/app/src/main/res/menu/toolbar.xml
+++ b/Halos/app/src/main/res/menu/toolbar.xml
@@ -19,10 +19,10 @@
         android:orderInCategory="103"
         android:id="@+id/activity_settings"/>
     <item
-        android:title="Item"
+        android:title="Create Tour"
         android:orderInCategory="104"
-        android:id="@+id/checkout"
-        />
+        android:id="@+id/create_tour"/>
+
     <item
         android:title="@string/Logout"
         android:orderInCategory="105"
