--- a/Halos/app/src/main/res/layout/activity_settings.xml
+++ b/Halos/app/src/main/res/layout/activity_settings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_settings"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,22 +11,214 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.brian.halos.SettingsActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/menu"
+        android:layout_width ="match_parent"
+        android:layout_height ="match_parent"
+        android:background ="?attr/colorPrimary"
+        android:elevation ="4dp"
+        android:theme ="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_weight=".5" />
 
-    <!-- TODO: Add input sanitzation -->
-    <EditText
-        android:id="@+id/radius_input"
+    <TextView
+        android:id="@+id/settings_title_text"
+        android:text="Halos Search Settings"
+        android:textSize="22dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="35dp"
+        android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:hint="Radius"/>
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/setting_radius_text"
+            android:hint="50 Miles"
+            android:textSize="18dp"
+            android:layout_marginLeft="150dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_radius_label"
+            android:text="Radius: "
+            android:textSize="18dp"
+            android:max="500"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <SeekBar
+            android:id="@+id/settings_radius_bar"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_type_text"
+            android:text="Category: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/setting_type_drop_menu"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_rank_text"
+            android:text="Rank By: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/setting_rank_drop_menu"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_opennow_text"
+            android:text="Open Now: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <Spinner
+            android:id="@+id/setting_opennow_drop_menu"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </Spinner>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_keyword_text"
+            android:text="Keyword: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/setting_keyword_enter_text"
+            android:hint="Enter Keyword"
+            android:textSize="12dp"
+            android:textAlignment="textEnd"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_minprice_text"
+            android:text="Min Price: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/setting_minprice_enter_text"
+            android:hint="Enter Min Price"
+            android:textSize="12dp"
+            android:textAlignment="textEnd"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </EditText>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/settings_maxprice_text"
+            android:text="Max Price: "
+            android:textSize="18dp"
+            android:layout_gravity="left"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/setting_maxprice_enter_text"
+            android:hint="Enter Max Price"
+            android:textSize="12dp"
+            android:textAlignment="textEnd"
+            android:layout_gravity="right"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+        </EditText>
+    </LinearLayout>
 
     <Button
         android:id="@+id/settings_submit_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/radius_input"/>
+        android:layout_marginBottom="10dp"/>
 
-</RelativeLayout>
+</LinearLayout>
