--- a/Halos/app/src/main/res/layout/landmark_pop_up.xml
+++ b/Halos/app/src/main/res/layout/landmark_pop_up.xml
@@ -21,17 +21,17 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/popup_desc"
-        android:hint="Description"
+        android:id="@+id/popup_type"
+        android:hint="Type"
         android:textSize="12dp"
         android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/popup_type"
-        android:hint="Type"
-        android:textSize="10dp"
+        android:id="@+id/popup_rating"
+        android:hint="Rating"
+        android:textSize="12dp"
         android:layout_gravity="right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
