add tour, minor Tour class change

--- a/Halos/app/src/main/res/layout/activity_halos_map.xml
+++ b/Halos/app/src/main/res/layout/activity_halos_map.xml
@@ -29,12 +29,12 @@
         tools:context="com.example.brian.halos.HalosMapActivity" />
 
     <Button
-        android:id="@+id/tour_btn"
+        android:id="@+id/start_tour_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/map"
         android:layout_marginBottom="6dp"
         android:layout_centerHorizontal="true"
-        android:text="Take Tour" />
+        android:text="Start Tour" />
 
 </RelativeLayout>
