geocoding api function

--- a/Halos/app/src/main/res/layout/activity_settings.xml
+++ b/Halos/app/src/main/res/layout/activity_settings.xml
@@ -14,9 +14,9 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/menu"
         android:layout_width ="match_parent"
-        android:layout_height ="match_parent"
+        android:layout_height ="0dp"
         android:background ="?attr/colorPrimary"
-        android:elevation ="4dp"
+        android:elevation ="0dp"
         android:theme ="@style/ThemeOverlay.AppCompat.ActionBar"
         android:layout_weight=".5" />
 
