--- a/Halos/app/src/main/res/layout/activity_login.xml
+++ b/Halos/app/src/main/res/layout/activity_login.xml
@@ -9,21 +9,21 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="116dp"
+        android:paddingTop="76dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
         android:background="@color/white">
 
-        <Button
-            android:text="Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/bypasser" />
+        <!--<Button-->
+            <!--android:text="Button"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@+id/bypasser" />-->
 
-        <ImageView android:src="@drawable/logo"
+        <ImageView android:src="@drawable/halos"
             android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_height="240dp"
             android:layout_gravity="center_horizontal"
             android:background="@color/white" />
 
@@ -64,7 +64,7 @@
             android:text="No account yet? Create one"
             android:gravity="center"
             android:textSize="12dip"
-            android:textColor="@color/accentBlue"
+            android:textColor="@color/halos_orange"
             android:background="@color/white" />
 
         <Button android:id="@+id/btn_forgot_password"
@@ -74,7 +74,7 @@
             android:text="Forgot Password"
             android:gravity="center"
             android:textSize="12dip"
-            android:textColor="@color/accentBlue"
+            android:textColor="@color/halos_orange"
             android:background="@color/white" />
 
     </LinearLayout>
