--- a/Halos/app/src/main/res/layout/fragment_store__tab__checkout.xml
+++ b/Halos/app/src/main/res/layout/fragment_store__tab__checkout.xml
@@ -23,7 +23,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:id="@+id/textView" />
+
+        <Button
+            android:id="@+id/checkout_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="44dp"
+            android:text="Button" />
 
     </RelativeLayout>
 
