store ui changes

--- a/Halos/app/src/main/res/layout/activity_store.xml
+++ b/Halos/app/src/main/res/layout/activity_store.xml
@@ -32,9 +32,9 @@
 
             <android.support.v4.view.PagerTabStrip
                 android:layout_width="match_parent"
-                android:background="@color/green"
+                android:background="@color/halos_orange"
                 android:id="@+id/TabTitleStrip"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="0dp"
                 android:layout_height="50dp"
                 android:layout_gravity="top" />
 
