--- a/Halos/app/src/main/res/layout/activity_tour_map.xml
+++ b/Halos/app/src/main/res/layout/activity_tour_map.xml
@@ -1,3 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_page2"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".HalosMapActivity">
 
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -7,3 +15,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.brian.halos.TourMapActivity" />
+
+    <Button
+        android:id="@+id/tour_map_canceltour"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="39dp"
+        android:layout_marginStart="79dp"
+        android:text="cancel" />
+
+    <Button
+        android:id="@+id/tour_map_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tour_map_canceltour"
+        android:layout_marginStart="56dp"
+        android:layout_toEndOf="@+id/tour_map_canceltour"
+        android:text="save" />
+
+
+</RelativeLayout>
