--- a/Halos/app/src/main/res/layout/fragment_store__tab__top_paid.xml
+++ b/Halos/app/src/main/res/layout/fragment_store__tab__top_paid.xml
@@ -1,30 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.brian.halos.Store_Tab_TopPaid">
 
-    <RelativeLayout
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:id="@+id/RecycleView_TopPaid"
+        android:layout_height="match_parent" />
+</LinearLayout>
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:srcCompat="@drawable/construction"
-            android:id="@+id/imageView2"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="64dp" />
 
-        <TextView
-            android:text="top paid"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
 
-    </RelativeLayout>
-
-</FrameLayout>
