--- a/Halos/app/src/main/res/layout/cart_card.xml
+++ b/Halos/app/src/main/res/layout/cart_card.xml
@@ -21,7 +21,7 @@
                 app:srcCompat="@drawable/nyc"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:id="@+id/card_image" />
+                android:id="@+id/cart_image" />
 
             <TextView
                 android:text="TextView"
@@ -29,8 +29,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/card_image"
-                android:id="@+id/card_title" />
+                android:layout_toEndOf="@+id/cart_image"
+                android:id="@+id/cart_title" />
 
             <TextView
                 android:text="TextView"
@@ -40,17 +40,17 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="73dp"
-                android:id="@+id/card_creator" />
+                android:id="@+id/cart_creator" />
 
             <TextView
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/card_title"
-                android:layout_toEndOf="@+id/card_image"
+                android:layout_below="@+id/cart_title"
+                android:layout_toEndOf="@+id/cart_image"
                 android:layout_marginTop="23dp"
-                android:id="@+id/card_description" />
+                android:id="@+id/cart_description" />
 
             <TextView
                 android:text="TextView"
@@ -58,22 +58,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_toEndOf="@+id/card_image"
+                android:layout_toEndOf="@+id/cart_image"
                 android:layout_marginBottom="12dp"
-                android:id="@+id/card_price" />
+                android:id="@+id/cart_price" />
 
-            <ImageView
-                android:id="@+id/addimage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignBottom="@+id/card_price"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/card_description"
-                android:layout_marginEnd="13dp"
-                app:srcCompat="@drawable/add" />
 
         </RelativeLayout>
 
 
-        </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
