--- a/Halos/app/src/main/res/layout/activity_tour_map.xml
+++ b/Halos/app/src/main/res/layout/activity_tour_map.xml
@@ -16,6 +16,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.brian.halos.TourMapActivity" />
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/menu"
+        android:layout_width ="match_parent"
+        android:layout_height ="?attr/actionBarSize"
+        android:background ="?attr/colorPrimary"
+        android:elevation ="4dp"
+        android:theme ="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme ="@style/ThemeOverlay.AppCompat.Light"
+        android:layout_weight="1" />
+
     <Button
         android:id="@+id/tour_map_canceltour"
         android:layout_width="wrap_content"
