--- a/Halos/app/src/main/res/layout/landmark_pop_up.xml
+++ b/Halos/app/src/main/res/layout/landmark_pop_up.xml
@@ -3,12 +3,12 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/popup_image"
-        android:src="@drawable/cuse1"
-        android:scaleType="centerCrop"
-        android:layout_width="250dp"
-        android:layout_height="100dp" />
+    <!--<ImageView-->
+        <!--android:id="@+id/popup_image"-->
+        <!--android:src="@drawable/cuse1"-->
+        <!--android:scaleType="centerCrop"-->
+        <!--android:layout_width="250dp"-->
+        <!--android:layout_height="100dp" />-->
 
     <TextView
         android:id="@+id/popup_name"
