--- a/Halos/app/src/main/res/layout/activity_retrieve_password.xml
+++ b/Halos/app/src/main/res/layout/activity_retrieve_password.xml
@@ -14,7 +14,7 @@
         android:paddingRight="24dp"
         android:background="@color/white">
 
-        <ImageView android:src="@drawable/logo"
+        <ImageView android:src="@drawable/halos"
             android:layout_width="wrap_content"
             android:layout_height="72dp"
             android:layout_marginBottom="0dp"
