--- a/Halos/app/src/main/res/layout/fragment_tour__display_.xml
+++ b/Halos/app/src/main/res/layout/fragment_tour__display_.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/yellow"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context="com.example.brian.halos.Tour_Display_Frag">
 
