--- a/Halos/app/src/main/res/layout/savelayout.xml
+++ b/Halos/app/src/main/res/layout/savelayout.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:background="@color/halos_blue"
     android:weightSum="1"
    >
 
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CheckOut"
-        android:background="@color/green"
+        android:background="@color/halos_orange"
         android:gravity="center"
         android:textAllCaps="true"
         android:textColor="@color/black"
