everything works- Need to Update UI in store

--- a/Halos/app/src/main/res/layout/activity_checkout__store.xml
+++ b/Halos/app/src/main/res/layout/activity_checkout__store.xml
@@ -46,6 +46,13 @@
             android:gravity="center"
             android:text="Buy" />
 
+        <Button
+            android:id="@+id/cancel_buy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cancel" />
+
+
     </LinearLayout>
 
 
