--- a/Halos/app/src/main/res/layout/activity_user_profile.xml
+++ b/Halos/app/src/main/res/layout/activity_user_profile.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/halos_blue"
     android:id="@+id/activity_user_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/userProfileName"
         android:text="User Name Here"
+        android:textColor="@color/gold"
         android:textAppearance="@android:style/TextAppearance.Large"
         android:layout_below="@+id/menu"
         android:layout_toEndOf="@+id/imageView"
@@ -51,7 +53,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:id="@+id/RecycleView_Topfree"
+            android:id="@+id/RecycleView_UserProfile"
             android:layout_height="match_parent" />
 
 
